<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/pad_20dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_sec" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/pad_15dp">

            <Button
                android:id="@+id/btn_facebook"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_fbk" />

            <Button
                android:id="@+id/btn_google"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:background="@drawable/btn_gp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_5dp"
            android:text="@string/or"
            android:textSize="@dimen/txt_14sp" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/email"
            android:inputType="textEmailAddress">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_password"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_10dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_white_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_20dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/pad_5dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
