<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_10dp"
        android:paddingTop="@dimen/pad_10dp"
        android:paddingBottom="@dimen/pad_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/txt_14sp"
            android:textColor="@color/main_color_blue"
            android:layout_marginRight="@dimen/pad_10dp"/>

        <EditText
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_color_gray_lt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_10dp"
        android:paddingTop="@dimen/pad_10dp"
        android:paddingBottom="@dimen/pad_10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_5dp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/pad_10dp"
            android:gravity="center_vertical"
            android:text="@string/publc"
            android:textColor="@color/main_color_blue"
            android:textSize="@dimen/txt_14sp" />

        <ToggleButton
            android:id="@+id/toggle_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOn="@string/yes"
            android:textOff="@string/no" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_color_gray_lt" />

    <LinearLayout
        android:id="@+id/ppl_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_5dp"
            android:text="@string/invite"
            android:textColor="@color/main_color_blue"
            android:textSize="@dimen/txt_14sp" />

        <EditText
            android:id="@+id/textView2"
            style="@style/editext_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_add" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_compose_blue"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/pad_15dp" />

</LinearLayout>