<?xml version="1.0" encoding="utf-8"?>
<qcodemx.com.chatt.ui.ChatItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llaa"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pad_15dp"
        android:layout_marginRight="@dimen/pad_15dp" >

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_chat1"
             />

        <LinearLayout
            android:id="@+id/v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_chat_item"
            android:background="@drawable/chat_bubble_gray"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/pad_chat_item"
            android:paddingRight="@dimen/pad_15dp"
            android:paddingTop="@dimen/pad_5dp"
            android:paddingBottom="@dimen/pad_5dp"
            android:layout_alignBottom="@+id/img">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_13sp" />
            <TextView
                android:id="@+id/text_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_14sp"
                android:maxLines="3"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textColor="@color/main_color_gray"
            android:textSize="@dimen/txt_14sp"
            android:layout_alignRight="@+id/v1"
            android:layout_below="@+id/v1"
            android:layout_marginTop="@dimen/pad_5dp" />
        
    </RelativeLayout>
</qcodemx.com.chatt.ui.ChatItemView>
